--- a/Web/Areas/EarlyWarning/Views/HRD/AddWoreda.cshtml
+++ b/Web/Areas/EarlyWarning/Views/HRD/AddWoreda.cshtml
@@ -8,7 +8,7 @@
 
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">@Html.Translate("Add Woreda")</h3>
+    <h4 id="myModalLabel" class="modal-title" >@Html.Translate("Add Woreda")</h4>
 </div>
 
 @using (Html.BeginForm("AddWoreda", "HRD", new { id = Model.HRDID }, FormMethod.Post, new { @class = "modal-form", id = "myForm1" }))
@@ -20,48 +20,47 @@
         
         <div class="form-horizontal">
             
-            <div class="control-group" id="region">
-                <div class="control-label">
+            <div class="form-group" id="region">
+                <div class="control-label col-md-3 col-md-offset-1">
                     @Html.Label(Html.Translate("Region"))
                 </div>
-                <div class="controls" id="div_region">
-                    @Html.DropDownList("RegionID","--Select Region--")
-                    @Html.ValidationMessageFor(m => m.RegionID)
-               
+                <div class="col-md-4" id="div_region">
+                    @Html.DropDownList("RegionID",null,"--Select Region--", new { @class = "form-control" })
+                    <span class="help-block"> @Html.ValidationMessageFor(m => m.RegionID)</span>
                 </div>
 
             </div>
 
-            <div class="control-group">
-                <div class="control-label">
+            <div class="form-group">
+                <div class="control-label col-md-3 col-md-offset-1">
                     @Html.Label(Html.Translate("Zone"))
                 </div>
-                <div class="controls" id="div_zone">
-                    @Html.DropDownList("ZoneID","--Select Zone--")
-                    @Html.ValidationMessageFor(m => m.ZoneID)
-               
+                <div class="col-md-4" id="div_zone">
+                    @Html.DropDownList("ZoneID", null, "--Select Zone--", new { @class = "form-control" })
+                    <span class="help-block"> @Html.ValidationMessageFor(m => m.ZoneID)</span>
+
                 </div>
 
             </div>
-            <div class="control-group">
-                <div class="control-label">
+            <div class="form-group">
+                <div class="control-label col-md-3 col-md-offset-1">
                     @Html.LabelFor(m => m.WoredaID, Html.Translate("Woreda"))
                 </div>
-                <div class="controls" id="div_woreda" >
+                <div class="col-md-4" id="div_woreda" >
                     @*@Html.DropDownList( "WoredaID",ViewBag.WoredaID as SelectList, new {@id="WoredaID"})*@
-                    @Html.DropDownList("WoredaID",String.Empty)
-                    @Html.ValidationMessageFor(m => m.WoredaID)
+                    @Html.DropDownList("WoredaID", null, String.Empty, new { @class = "form-control" })
+                    <span class="help-block"> @Html.ValidationMessageFor(m => m.WoredaID)</span>
                 </div>
 
             </div>
-            <div class="control-group">
-                <div class="control-label">
-                    @Html.LabelFor(m => m.Beneficiary, Html.Translate("Beneficiary"))
+            <div class="form-group">
+                <div class="control-label col-md-3 col-md-offset-1">
+                    @Html.LabelFor(m => m.Beneficiary, Html.Translate(" Beneficiary "))
                 </div>
-                <div class="controls" >
+                <div class="col-md-4" >
                     @*@Html.DropDownList( "WoredaID",ViewBag.WoredaID as SelectList, new {@id="WoredaID"})*@
-                    @Html.TextBoxFor(m=>m.Beneficiary)
-                    @Html.ValidationMessageFor(m => m.Beneficiary)
+                    @Html.TextBoxFor(m=>m.Beneficiary, new {@class="form-control"})
+                    <span class="help-block"> @Html.ValidationMessageFor(m => m.Beneficiary)</span>
                 </div>
 
             </div>
@@ -125,7 +124,7 @@
             document.getElementById("ZoneID").disabled = false;
 
             //var msg = "";
-            var htm = "<select name='ZoneID' id ='ZoneID' > ";
+            var htm = "<select class='form-control' name='ZoneID' id ='ZoneID' > ";
             for (var z in zones) {
                 //htm += "<option value='" + zones[z].AdminUnitID + "'>" + zones[z].Name + "</option>";
                 htm += "<option value='" + zones[z].ZoneID + "'>" + zones[z].ZoneName + "</option>";
@@ -145,7 +144,7 @@
             var zoneId = $("#ZoneID").val();
             //alert(zoneId);
             var woredas = admin_zone_hash[zoneId];
-            var s = "<select id ='WoredaID' name='WoredaID' >";
+            var s = "<select  class='form-control' id ='WoredaID' name='WoredaID' >";
             for (w in woredas) {
                 s += "<option value='" + woredas[w].WoredaID + "'>" + woredas[w].WoredaName + "</option>";
             }
