--- a/Web/Areas/EarlyWarning/Views/Contribution/Create.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Contribution/Create.cshtml
@@ -1,63 +1,78 @@
-﻿@model Cats.Models.Contribution
+﻿@using Cats.Helpers
+@model Cats.Models.Contribution
 @{
     ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_MainLayout.cshtml";  
+    Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+    ViewBag.PageTitle = Html.Translate("Create Donor Contribution");
+    ViewBag.PageTitleDescription = "";
 }
 
-@section LeftBar
-{
-    @Html.Partial("_ContributionLeftBar");
-}
-@section Toolbar
-{
-    <a class="btn toolbar-btn " data-buttontype="btn_save" data-submittedform="frm_create_contribution"></a>
-    <a class="btn toolbar-btn " data-buttontype="btn_cancel" href="@Url.Action("Index", "Contribution")" title="save"></a>
-}
+<div class="row">
+    <div class="col-md-2">
+        @Html.Partial("_ContributionLeftBar");
+    </div>
+    <div class="col-md-10">
+        <div class="portlet light bordered">
+            <div class="portlet-title">
+                <div class="caption font-green-sharp">
+                    <i class="icon-list font-green-sharp"></i>
+                    <span class="caption-subject bold uppercase"> @Html.Translate("Donor Contribution Details")</span>
+                </div>
+                <div class="tools">
+                    <a href="#" class="collapse" data-original-title="" title=""></a>
+                </div>
+                <div class="actions">
+                    <a class="btn btn-sm green" data-buttontype="btn_save" data-submittedform="frm_create_contribution" onclick="javascript: document.getElementById('frm_create_contribution').submit()"><i class="fa fa-save"></i> @Html.Translate("Save")</a>
+                    <a class="btn btn-sm red" data-buttontype="btn_cancel" href="@Url.Action("Index", "Contribution")" title="cancel"><i class="fa fa-times"></i> @Html.Translate("Cancel")</a>
+                    <a class="btn btn-icon-only btn-default fullscreen" href="javascript:;"></a>
+                </div>
+            </div>
+            <div class="portlet-body">
+                @using (Html.BeginForm("Create", "Contribution", FormMethod.Post, new { id = "frm_create_contribution", @class = "form-horizontal" }))
+                {
+                    @Html.ValidationSummary(true)
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <div class="control-label col-md-4">
+                                    @Html.LabelFor(m => m.HRDID, "HRD")
+                                </div>
+                                <div class="col-md-4">
+                                    @Html.DropDownList("HRDID", null, String.Empty, new { @class = "form-control" })
+                                    <span class="help-block"> @Html.ValidationMessageFor(m => m.HRDID)</span>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <div class="control-label col-md-4">
+                                    @Html.LabelFor(m => m.DonorID, "Donor")
+                                </div>
+                                <div class="col-md-4">
+                                    @Html.DropDownList("DonorID", null, String.Empty, new { @class = "form-control" })
+                                    <span class="help-block"> @Html.ValidationMessageFor(m => m.DonorID)</span>
+                                </div>
+                            </div>
+                        </div>
 
-<div>
-    <h4>Create Donor Contribution</h4>
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <div class="control-label col-md-4">
+                                    @Html.LabelFor(m => m.ContributionType)
+                                </div>
+                                <div class="col-md-4">
+                                    @Html.DropDownList("ContributionType", new List<SelectListItem> { new SelectListItem { Text = "In-Cash", Value = "In-Cash" }, new SelectListItem { Text = "In-Kind", Value = "In-Kind" } }, new { @class = "form-control" })
+                                    <span class="help-block"> @Html.ValidationMessageFor(m => m.ContributionType)</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                }
+            </div>
+        </div>
+        
+
+    </div>
 </div>
-@using (Html.BeginForm("Create", "Contribution", FormMethod.Post, new { id = "frm_create_contribution" }))
-{
-    @Html.ValidationSummary(true)
-    <div class="well form-horizontal">
-        <div class="control-group">
-            <div class="control-label">
-                @Html.LabelFor(m => m.HRDID,"HRD")
-            </div>
-            <div class="controls">
-                @Html.DropDownList("HRDID", String.Empty)
-                @Html.ValidationMessageFor(m => m.HRDID)
-            </div>
-    </div>
-        <div class="control-group">
-            <div class="control-label">
-                @Html.LabelFor(m => m.DonorID,"Donor")
-            </div>
-            <div class="controls">
-                @Html.DropDownList("DonorID", String.Empty)
-                @Html.ValidationMessageFor(m => m.DonorID)
-            </div>
-
-        </div>
-
-       <div class="control-group">
-            <div class="control-label">
-                @Html.LabelFor(m => m.ContributionType)
-            </div>
-            <div class="controls">
-                 @Html.DropDownList("ContributionType", new List<SelectListItem>
-
-                 {
-                    new SelectListItem{ Text="In-Cash", Value = "In-Cash" },
-                    new SelectListItem{ Text="In-Kind", Value = "In-Kind" }
-                 }) 
-                @Html.ValidationMessageFor(m => m.ContributionType)
-            </div>
-
-        </div>
-      
-    </div>
-}
-
